developer detail added

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta
+      name="author"
+      content="Viral Rathod (JavaScript Developer), Email - rvdrathod.viral1989@gmail.com"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Viral Rathod (JavaScript Developer), Email - rvdrathod.viral1989@gmail.com"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +35,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>React App</title>
+    <title>Viral Rathod (JustAnswer Demo)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
